test/corpus/fail/idl-mo-float32.mo
=========
idl-mo-float32.mo
=========

//MOC-FLAG  --actor-idl idl-mo-bad-method

import imported "ic:aaaaa-aa";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP drun-run
//SKIP wasm-run


---

(source_file
  (line_comment)
  (import
    (var_pat
      (identifier))
    (text_literal))
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment)
  (line_comment))
